# labs_OAIP

./: CMakeLists.txt
lab_2/: task_2_1.cpp  task_2_10.cpp  task_2_11.cpp  task_2_12.cpp  task_2_13.cpp  task_2_14.cpp  task_2_15.cpp  task_2_16.cpp  task_2_17.cpp  task_2_2.cpp  task_2_3.cpp  task_2_4.cpp  task_2_5.cpp  task_2_6.cpp  task_2_7_1.cpp  task_2_7_2.cpp  task_2_7_3.cpp  task_2_8.cpp  task_2_9.cpp
lab_3/: task_3_1.cpp  task_3_2.cpp  task_3_3.cpp  task_3_4.cpp  task_3_5.cpp  task_3_6.cpp  task_3_7.cpp  task_3_8.cpp  task_3_9.cpp
lab_4/: task-4.1.cpp  task-4.10.cpp  task-4.11.cpp  task-4.12.cpp  task-4.13.cpp  task-4.14.cpp  task-4.15.cpp  task-4.2.cpp  task-4.3.cpp  task-4.4.cpp  task-4.5.cpp  task-4.6.cpp  task-4.7.cpp  task-4.8.cpp  task-4.9.cpp
lab_5/: task-5.1.cpp  task-5.1_additional.cpp  task-5.2.cpp  task-5.2_additional.cpp  task-5.3.1.cpp  task-5.3.2.cpp  task-5.3.3.cpp  task-5.3_additional.cpp
lab_5/lib/: libdynamic_lib.dylib
lab_5/lib_source/: dynamic_lib.cpp  dynamic_lib.h  static_lib.cpp  static_lib.h
lab_6/: task-6.1.cpp  task-6.2.cpp  task-6.3.cpp  task-6.4.cpp  task-6.5.cpp  task-6.6.cpp  task-6.7.cpp  task-6.8.cpp  task-6.9.cpp
lab_7/: task-7.1.cpp  task-7.2.cpp  task-7.3.cpp  task-7.4.cpp  task-7.5.cpp  task-7.6.cpp  task-7.7.cpp  task-7.8.cpp  task-7.9.cpp
lab_8/: task-8.1.cpp  task-8.2.cpp  text_for_task2.txt
