cmake_minimum_required(VERSION 3.20)
project(labs_OAIP)

set(CMAKE_CXX_STANDARD 14)

add_executable(task_2_17 lab_2/task_2_17.cpp)
add_executable(task_2_16 lab_2/task_2_16.cpp)
add_executable(task_2_15 lab_2/task_2_15.cpp)
add_executable(task_2_14 lab_2/task_2_14.cpp)

add_executable(task_3_1 lab_3/task_3_1.cpp)