cmake_minimum_required(VERSION 3.20)
project(labs_OAIP)

set(CMAKE_CXX_STANDARD 14)

add_executable(task_2_17 lab_2/task_2_17.cpp)
add_executable(task_2_16 lab_2/task_2_16.cpp)
add_executable(task_2_15 lab_2/task_2_15.cpp)
add_executable(task_2_14 lab_2/task_2_14.cpp)

add_executable(task_2_13 lab_2/task_2_13.cpp)
add_executable(task_2_12 lab_2/task_2_12.cpp)
add_executable(task_2_11 lab_2/task_2_11.cpp)
add_executable(task_2_10 lab_2/task_2_10.cpp)
add_executable(task_2_9 lab_2/task_2_9.cpp)
add_executable(task_2_8 lab_2/task_2_8.cpp)
add_executable(task_2_7_3 lab_2/task_2_7_3.cpp)
add_executable(task_2_7_2 lab_2/task_2_7_2.cpp)
add_executable(task_2_7_1 lab_2/task_2_7_1.cpp)
add_executable(task_2_6 lab_2/task_2_6.cpp)
add_executable(task_2_5 lab_2/task_2_5.cpp)
add_executable(task_2_4 lab_2/task_2_4.cpp)
add_executable(task_2_3 lab_2/task_2_3.cpp)
add_executable(task_2_2 lab_2/task_2_2.cpp)
add_executable(task_2_1 lab_2/task_2_1.cpp)

add_executable(task_3_1 lab_3/task_3_1.cpp)
add_executable(task_3_2 lab_3/task_3_2.cpp)
add_executable(task_3_3 lab_3/task_3_3.cpp)
add_executable(task_3_4 lab_3/task_3_4.cpp)
add_executable(task_3_5 lab_3/task_3_5.cpp)
add_executable(task_3_6 lab_3/task_3_6.cpp)
add_executable(task_3_7 lab_3/task_3_7.cpp)
add_executable(task_3_8 lab_3/task_3_8.cpp)
add_executable(task_3_9 lab_3/task_3_9.cpp)