cmake_minimum_required(VERSION 3.20)
project(labs_OAIP)

set(CMAKE_CXX_STANDARD 14)

add_executable(task_2_17 lab_2/task_2_17.cpp)
add_executable(task_2_16 lab_2/task_2_16.cpp)
add_executable(task_2_15 lab_2/task_2_15.cpp)
add_executable(task_2_14 lab_2/task_2_14.cpp)

add_executable(task_2_13 lab_2/task_2_13.cpp)
add_executable(task_2_12 lab_2/task_2_12.cpp)
add_executable(task_2_11 lab_2/task_2_11.cpp)
add_executable(task_2_10 lab_2/task_2_10.cpp)
add_executable(task_2_9 lab_2/task_2_9.cpp)
add_executable(task_2_8 lab_2/task_2_8.cpp)
add_executable(task_2_7_3 lab_2/task_2_7_3.cpp)
add_executable(task_2_7_2 lab_2/task_2_7_2.cpp)
add_executable(task_2_7_1 lab_2/task_2_7_1.cpp)
add_executable(task_2_6 lab_2/task_2_6.cpp)
add_executable(task_2_5 lab_2/task_2_5.cpp)
add_executable(task_2_4 lab_2/task_2_4.cpp)
add_executable(task_2_3 lab_2/task_2_3.cpp)
add_executable(task_2_2 lab_2/task_2_2.cpp)
add_executable(task_2_1 lab_2/task_2_1.cpp)

add_executable(task_3_1 lab_3/task_3_1.cpp)
add_executable(task_3_2 lab_3/task_3_2.cpp)
add_executable(task_3_3 lab_3/task_3_3.cpp)
add_executable(task_3_4 lab_3/task_3_4.cpp)
add_executable(task_3_5 lab_3/task_3_5.cpp)
add_executable(task_3_6 lab_3/task_3_6.cpp)
add_executable(task_3_7 lab_3/task_3_7.cpp)
add_executable(task_3_8 lab_3/task_3_8.cpp)
add_executable(task_3_9 lab_3/task_3_9.cpp)

add_executable(task-4.1 lab_4/task-4.1.cpp)
add_executable(task-4.2 lab_4/task-4.2.cpp)
add_executable(task-4.3 lab_4/task-4.3.cpp)
add_executable(task-4.4 lab_4/task-4.4.cpp)
add_executable(task-4.5 lab_4/task-4.5.cpp)
add_executable(task-4.6 lab_4/task-4.6.cpp)
add_executable(task-4.7 lab_4/task-4.7.cpp)
add_executable(task-4.8 lab_4/task-4.8.cpp)
add_executable(task-4.9 lab_4/task-4.9.cpp)
add_executable(task-4.10 lab_4/task-4.10.cpp)
add_executable(task-4.11 lab_4/task-4.11.cpp)
add_executable(task-4.12 lab_4/task-4.12.cpp)
add_executable(task-4.13 lab_4/task-4.13.cpp)
add_executable(task-4.14 lab_4/task-4.14.cpp)
add_executable(task-4.15 lab_4/task-4.15.cpp)


add_executable(task-5.1 lab_5/task-5.1.cpp)
add_executable(task-5.2 lab_5/task-5.2.cpp)

#static library
add_library(static_lib STATIC lab_5/lib_source/static_lib.cpp  lab_5/lib_source/static_lib.h lab_5/lib_source/dynamic_lib.h lab_5/lib_source/dynamic_lib.cpp)
find_library(S_LIB static_lib lab_5/lib)
target_link_libraries(task-5.1 LINK_PUBLIC ${S_LIB})

#dynamic library
add_library(dynamic_lib SHARED lab_5/lib_source/dynamic_lib.cpp)
find_library(D_LIB dynamic_lib lab_5/lib)
target_link_libraries(task-5.2 LINK_PUBLIC ${D_LIB})

add_executable(task-5.3.1 lab_5/task-5.3.1.cpp)
add_executable(task-5.3.2 lab_5/task-5.3.2.cpp)
add_executable(task-5.3.3 lab_5/task-5.3.3.cpp)

